--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>es.nvl36</groupId>
+	<groupId>es.nivel36</groupId>
 	<artifactId>laie</artifactId>
 	<version>0.0.2</version>
 
@@ -13,13 +13,16 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 
-		<version.server.bom>24.0.0.Final</version.server.bom>
-		<version.microprofile.bom>24.0.0.Final</version.microprofile.bom>
+		<laie.version>${project.version}</laie.version>
+
+		<version.server.bom>24.0.1.Final</version.server.bom>
+		<version.microprofile.bom>24.0.1.Final</version.microprofile.bom>
 		<version.junit.bom>5.7.2</version.junit.bom>
 
 		<version.primefaces>10.0.0</version.primefaces>
 		<version.omnifaces>3.11</version.omnifaces>
 		<version.mockito>3.11.0</version.mockito>
+		<version.simple_slf4j>1.7.32</version.simple_slf4j>
 
 		<version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
 		<version.maven-failsafe-plugin>3.0.0-M5</version.maven-failsafe-plugin>
@@ -31,7 +34,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.wildfly.bom</groupId>
-				<artifactId>wildfly-jakartaee8-with-tools</artifactId>
+				<artifactId>wildfly-jakartaee8</artifactId>
 				<version>${version.server.bom}</version>
 				<type>pom</type>
 				<scope>import</scope>
@@ -44,6 +47,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
@@ -52,7 +56,6 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
-
 	</dependencyManagement>
 
 	<dependencies>
@@ -69,14 +72,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jboss.spec.javax.annotation</groupId>
-			<artifactId>jboss-annotations-api_1.3_spec</artifactId>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
 			<scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>jakarta.security.enterprise</groupId>
-			<artifactId>jakarta.security.enterprise-api</artifactId>
 		</dependency>
 
 		<dependency>
@@ -88,6 +86,18 @@
 		<dependency>
 			<groupId>org.jboss.spec.javax.faces</groupId>
 			<artifactId>jboss-jsf-api_2.3_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.spec.javax.annotation</groupId>
+			<artifactId>jboss-annotations-api_1.3_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.security.enterprise</groupId>
+			<artifactId>jakarta.security.enterprise-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
@@ -116,8 +126,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search-orm</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
@@ -136,6 +146,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
+			<version>${version.simple_slf4j}</version>
 			<scope>test</scope>
 		</dependency>
 
